# word-counter

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: counter.cpp  counter.h  defines.h  file.cpp  file.h  helper.cpp  main.cpp  runner.cpp  runner.h
